# polymarket-weather-bot-poc

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_scan.yml
data/forecast_history/: forecasts_2026-01-29.jsonl
data/signals/: .gitkeep  history.json  latest.json  outcomes.json  signals_2026-01-27.json  signals_2026-01-28.json  signals_2026-01-29.json  signals_2026-01-30.json  signals_2026-01-31.json  signals_2026-02-01.json  signals_2026-02-02.json  signals_2026-02-03.json  signals_2026-02-04.json  signals_2026-02-05.json  signals_2026-02-06.json  signals_2026-02-07.json  signals_2026-02-08.json  signals_2026-02-09.json  signals_2026-02-10.json  signals_2026-02-11.json  signals_2026-02-12.json  signals_2026-02-13.json  signals_2026-02-14.json  signals_2026-02-15.json  signals_2026-02-16.json  signals_2026-02-17.json  signals_2026-02-18.json  signals_2026-02-19.json  signals_2026-02-20.json  signals_2026-02-21.json  signals_2026-02-22.json  (+152 more)
scripts/: compare_weather_sources.py  daily_signal_scan.py  demo_run.py  paper_trading_stats.py  resolve_signals.py  review_signals.py  run_backtest.py  train_calibrator.py
src/: __init__.py  config.py  runner.py
tests/: __init__.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_report.py  test_calibrator.py  test_database.py  test_decision.py  test_discord_notifier.py  test_features.py  test_market_parsing.py  test_paper_broker.py  test_probability.py  test_probability_ranges.py  test_real_client_parsing.py  test_resolve_signals.py  test_sizing.py  test_strategy_filters.py
(+44 files in other folders)
